fixed album view on small screen

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -2,7 +2,10 @@ body {
     background-color: #639fff;
     background-size: cover;
 }
-P{
+p{
+    word-break: break-word;
+}
+i{
     word-break: break-word;
 }
 #roundBorders{
@@ -14,27 +17,66 @@ P{
 }
 
 .jumbotron{
-  
-  /* can be treated like a fallback */
-  background-color: red;
 
-  /* will be "on top", if browser supports it */
-  background-image: linear-gradient(#0C27F3, red);
+    /* can be treated like a fallback */
+    background-color: red;
 
-  /* these will reset other properties, like background-position, but it does know what you mean */
-  background: red;
-  background: linear-gradient(#033382, #639fff);
-  
-    
+    /* will be "on top", if browser supports it */
+    background-image: linear-gradient(#0C27F3, red);
+
+    /* these will reset other properties, like background-position, but it does know what you mean */
+    background: red;
+    background: linear-gradient(#033382, #639fff);
+
+
 }
 #footer{
-     /* can be treated like a fallback */
-  background-color: red;
+    /* can be treated like a fallback */
+    background-color: red;
 
-  /* will be "on top", if browser supports it */
-  background-image: linear-gradient(#3838f2, red);
+    /* will be "on top", if browser supports it */
+    background-image: linear-gradient(#3838f2, red);
 
-  /* these will reset other properties, like background-position, but it does know what you mean */
-  background: red;
-  background: linear-gradient(#639fff, #033382);
+    /* these will reset other properties, like background-position, but it does know what you mean */
+    background: red;
+    background: linear-gradient(#639fff, #033382);
+}
+
+.previous{ 
+    display:inline;
+    float:left;
+    margin-left:80px;
+    text-decoration:none;
+    color:antiquewhite;
+    margin-bottom: 5px;
+
+}
+.next{ 
+    display:inline;
+    float:right;
+    margin-right:80px;
+    text-decoration:none;
+    color:antiquewhite;
+    margin-bottom:5px;
+
+}
+@media (max-width: 768px) {
+    .next{
+        display:inline;
+        float:left;
+        margin-left:0px;
+    }
+    .previous{ 
+        display:inline;
+        float:left;
+        margin-left:0px;
+    }
+}
+.gallery-image{
+    background-color: #639fff;
+    box-shadow: 10px 10px 5px #033382;
+    border: 2px solid white;
+    padding: 10px;
+    margin-bottom: 15px;
+
 }
